# neuroscale-autopilot

./: .env.example  .gitignore  Dockerfile  LICENSE  PROOF_OF_DEPLOYMENT.md  README.md  TRUST_LAYER.md  docker-compose.yml  main.py  orchestrator.py  pyproject.toml  requirements.txt  task.md
.github/workflows/: ci.yml
agents/: __init__.py
agents/analyzer/: __init__.py  analyzer.py  analyzer_qwen3max.py
agents/detector/: __init__.py  detector.py
agents/escalation/: __init__.py  escalation.py
agents/executor/: __init__.py  executor.py
agents/planner/: __init__.py  planner.py
agents/router/: __init__.py  cost_governor.py  model_router.py
agents/trust/: __init__.py  blast_radius.py  history.py  policies.yaml  reversibility.py  runbook_confidence.py  score.py
alibaba_cloud/: __init__.py  ecs_client.py
benchmarks/: baseline_human.py  generate_impact_md.py  run_benchmarks.py
chaos/: __init__.py  injector.py  oomkilled.py  scenarios.py
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx
docs/: ALIBABA_DEPLOYMENT.md  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  IMPACT.md  MCP_TOOLS.md  QUICKSTART.md  QWEN_MODEL_USAGE.md  TRUST_LAYER.md  blog-post.md  devpost-submission.md
k8s/: checkout-app.yaml
mcp_server/: __init__.py  server.py  tools.py
runbooks/: cost-spike-scale-down.json  crashloop-rollback.json  deployment-failure-sync.json  kyverno-policy-exception.json  oomkill-increase-memory.json
scripts/: healthcheck-watchdog.sh
tests/: conftest.py  test_pipeline.py  test_trust_score.py  test_v2_contracts.py
(+21 files in other folders)
