[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuroscale-autopilot"
version = "1.0.0"
description = "Self-healing Kubernetes infrastructure agent powered by Qwen AI"
authors = [{name = "Sodiq Jimoh", email = "sodiqjimoh80@gmail.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
